yoshimi 1.7.1 M

2020-5-19 Will
* Fixed regression CLI not enabling PadSyth.
* Separated out CLI engine detune controls.

2020-5-17 Will
* Moved CLI part specific controls from Common to Part.
  Don't know why they were in Common anyway.
* Changed CLI kit mode Disable to Normal.
  Clearer, and less chance of confusion.

2020-5-16 Will
* Separated out part, engine, kit enable controls.
  This actually slightly reduces the code, and reduces
  complexity significantly.
  There may be some GUI anomalys when CLI controlled.

2020-5-15 Will
* Separated out CLI engine level volume, pannning, velocity.
  This results in doplication but less complexity, and
  less chance of control additions causing problem,

2020-5-14 Will
* BugFix: Reverb type to bandwidth not resetting BW control.
* Corrected some controls still using direct numbers.
* Note On/Off fully respects multiple same note in Poly mode.
* Added 'Cracked Chimes' to Companion bank.
* Moved '.config/yoshimi/yoshimi.history' to:
  '.local/share/yoshimi/recent'
  This is for XDG compliance, as it is not a config file.

2020-5-13 Will
* Reverted PART_POLIPHONY and POLIPHONY to single limit.
* Refactored noteoff code.
* Refactored and changed setnotelimit to enforcenotelimit.
  This still isn't corrected when changing the key limit
  downwards by more than one as it only removes the oldest.
* enforcenotelimit now loops to remove all older notes :)
* BugFix: GUI Part volume control not working.
  It was still using direct numeric entry so failed when the
  recent change of control values.


2020-5-9 Will
* Merged GUI fixes from Kristian.
* Reinstated ocsillator window saving.
  Fault was due to missing window test in PadSynth UI :(

2020-5-9 Will
* BugFix: Disabled oscillator window saving caused segfaults.
* Reorganised several enable control values for consistency.
* Doc updates.

2020-5-4 Will
* BugFix: CLI not responding to engine on/off.
  Caused by aftertouch controls shifing part enable.